<resources>
    <string name="app_name">PeopleFind</string>

    <!-- Welcome Activity -->
    <string name="welcome_header">Приложение для расширения круга общения и поиска новых друзей с общими интересами.</string>
    <string name="welcome_description">Вы сможете найти людей рядом с вами, желающих дружить, обмениваться опытом.</string>
    <string name="start_button">Начать</string>
    <string name="login_from_welcome">Я уже <u>зарегистрирован</u></string>

    <!-- Register Activity -->
    <string name="register">Регистрация</string>
    <string name="email">Введите email</string>
    <string name="birthday">Введите дату рождения</string>
    <string name="password">Придумайте пароль</string>
    <string name="password_confirm">Повторите пароль</string>
    <string name="register_action">Зарегистрироваться</string>
    <string name="register_error">Не удалось зарегистрироваться</string>
    <string name="accept">ОК</string>
    <string name="login_from_register">Есть аккаунт? <u>Войти</u></string>

    <!-- Login Activity -->
    <string name="login">Вход</string>
    <string name="enter_password">Введите пароль</string>
    <string name="login_action">Войти</string>
    <string name="login_error">Не удалось войти в аккаунт</string>
    <string name="restore_password">Забыли пароль? <u>Восстановить</u></string>

    <!-- Restore Activity -->
    <string name="restore_action">Восстановление</string>
    <string name="restore_confirm">Подтвердить</string>

    <!-- Questionnaire, Change Questionnaire Activity -->
    <string name="enter_name">Укажите ваше имя</string>
    <string name="enter_gender">Укажите ваш пол</string>
    <string name="enter_age">Укажите ваш возраст</string>
    <string name="enter_interests">Укажите ваши интересы</string>
    <string name="enter_study">Укажите ваше место учебы или работы</string>
    <string name="enter_city">Укажите город проживания</string>

    <!-- Questionnaire Activity -->
    <string name="welcome">Добро пожаловать!</string>
    <string name="fill_questionnaire">Пожалуйста, заполните анкету</string>
    <string name="name_question">Как Вас зовут?</string>
    <string name="gender_question">Какого Вы пола?</string>
    <string name="age_question">Сколько Вам лет?</string>
    <string name="interests_question">Какие у Вас интересы?</string>
    <string name="study_question">В какой сфере Вы работаете или учитесь?</string>
    <string name="city_question">В каком городе Вы живете?</string>
    <string name="next_action">Далее</string>
    <string name="data_change">Эти данные можно изменить в профиле</string>

    <!-- Change Questionnaire, About User Card Activity -->
    <string name="interests">Интересы</string>

    <!-- Main Activity -->
    <string name="home">Главная</string>
    <string name="chat">Чат</string>
    <string name="profile">Профиль</string>

    <!-- HomeFragment -->
    <string name="dislike_questionnaire">Отложить анкету</string>
    <string name="like_questionnaire">Лайкнуть анкету</string>
    <string name="list_questionnaire">Список анкет пользователей</string>

    <!-- About User Card Activity -->
    <string name="about_myself">О себе</string>

    <!-- Messenger Fragment -->
    <string name="messages">Сообщения</string>
    <string name="search_chat">Найти чат</string>

    <!-- Chat Activity -->
    <string name="go_back">Перейти назад</string>
    <string name="meet">Встреча</string>
    <string name="clip_to_message">Прикрепить к сообщению</string>
    <string name="message">Сообщение</string>
    <string name="send_message">Отправить сообщение</string>

    <!-- Meet Activity -->
    <string name="create_meet">Организовать встречу</string>
    <string name="date_time">Дата и время</string>
    <string name="think_date_time">Придумайте дату и время</string>
    <string name="meet_place">Место проведения встречи</string>
    <string name="think_place">Придумайте место проведения</string>
    <string name="meet_goal">Цель встречи</string>
    <string name="think_goal">Придумайте цель проведения</string>
    <string name="meet_confirm">Подтвердить</string>

    <!-- Profile Fragment -->
    <string name="change_questionnaire_action">Изменить анкету</string>
    <string name="change_password_action">Изменить пароль</string>
    <string name="log_out_action">Выйти из аккаунта</string>

    <!-- Change Questionnaire Activity -->
    <string name="changing_questionnaire">Изменение анкеты</string>
    <string name="name">Имя</string>
    <string name="gender">Пол</string>
    <string name="age">Возраст</string>
    <string name="study">Сфера работы или учебы</string>
    <string name="city">Город проживания</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>