<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ChangeQuestionnaireActivity">

    <TextView
        android:id="@+id/textChangeQuestionnaire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/changing_questionnaire"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textChangeQuestionnaire">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/name"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextName"
                style="@style/EditText.Themed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/enter_name"
                android:importantForAutofill="no"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/gender"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextGender"
                style="@style/EditText.Themed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/enter_gender"
                android:importantForAutofill="no"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/age"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextAge"
                style="@style/EditText.Themed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/enter_age"
                android:importantForAutofill="no"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/interests"
                android:textSize="16sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInterests">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroupInterests"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleLine="true" />

            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/study"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextStudy"
                style="@style/EditText.Themed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/enter_study"
                android:importantForAutofill="no"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/city"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextCity"
                style="@style/EditText.Themed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/enter_city"
                android:importantForAutofill="no"
                android:inputType="text" />

            <com.faltenreich.skeletonlayout.SkeletonLayout
                android:id="@+id/skeletonConfirmChangeQuestionnaire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:maskColor="?attr/colorOnPrimary"
                app:maskCornerRadius="10dp"
                app:shimmerColor="?attr/colorPrimary">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonConfirmChangeQuestionnaire"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_button"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/meet_confirm" />

            </com.faltenreich.skeletonlayout.SkeletonLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>