<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <LinearLayout
        android:id="@+id/layoutQuestionnaire"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/skeletonNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".presentation.QuestionnaireActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/fill_questionnaire"
            android:textAlignment="center"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="18sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/name_question"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editTextName"
                        style="@style/EditText.Themed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:hint="@string/enter_name"
                        android:importantForAutofill="no"
                        android:inputType="text" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/gender_question"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editTextGender"
                        style="@style/EditText.Themed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:hint="@string/enter_gender"
                        android:importantForAutofill="no"
                        android:inputType="text" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/age_question"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editTextAge"
                        style="@style/EditText.Themed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:hint="@string/enter_age"
                        android:importantForAutofill="no"
                        android:inputType="text" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/interests_question"
                        android:textSize="16sp" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInterests">

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/chipGroupInterests"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:singleLine="true" />

                    </HorizontalScrollView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/study_question"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editTextStudy"
                        style="@style/EditText.Themed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:hint="@string/enter_study"
                        android:importantForAutofill="no"
                        android:inputType="text" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/city_question"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editTextCity"
                        style="@style/EditText.Themed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:hint="@string/enter_city"
                        android:importantForAutofill="no"
                        android:inputType="text" />

                </LinearLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/textQuestionnaireNotice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/data_change"
        android:textColor="@color/edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.faltenreich.skeletonlayout.SkeletonLayout
        android:id="@+id/skeletonNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/textQuestionnaireNotice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonNext"
            style="@style/MaterialButton.Inverse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/inter_medium"
            android:text="@string/next_action"
            android:textSize="16sp" />

    </com.faltenreich.skeletonlayout.SkeletonLayout>
</androidx.constraintlayout.widget.ConstraintLayout>