<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dark"
    tools:context=".presentation.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="10dp"
            android:paddingEnd="16dp"
            android:paddingBottom="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/manrope_medium"
                android:text="@string/login"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextEmail"
                style="@style/EditText.Themed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/email"
                android:inputType="text|textEmailAddress" />

            <EditText
                android:id="@+id/editTextPassword"
                style="@style/EditText.Themed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="text|textPassword" />

            <com.skydoves.androidveil.VeilLayout
                android:id="@+id/veilLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:veilLayout_baseAlpha="0.6"
                app:veilLayout_baseColor="@android:color/holo_green_dark"
                app:veilLayout_dropOff="0.5"
                app:veilLayout_highlightAlpha="1.0"
                app:veilLayout_highlightColor="@android:color/holo_green_light"
                app:veilLayout_radius="10dp"
                app:veilLayout_shimmerEnable="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonLogin"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_button"
                    android:fontFamily="@font/manrope_bold"
                    android:text="@string/login_action"
                    android:textSize="14sp" />

            </com.skydoves.androidveil.VeilLayout>

            <TextView
                android:id="@+id/textRestorePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/manrope_regular"
                android:text="@string/restore_password"
                android:textAlignment="center"
                android:textSize="14sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>