<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.fragment.HomeFragment">

    <com.faltenreich.skeletonlayout.SkeletonLayout
        android:id="@+id/skeletonQuestionnaires"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/layoutCardActions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maskColor="?attr/colorOnPrimary"
        app:maskCornerRadius="12dp"
        app:shimmerColor="?attr/colorPrimary">

        <com.yuyakaido.android.cardstackview.CardStackView
            android:id="@+id/cardQuestionnaires"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/list_questionnaire" />

    </com.faltenreich.skeletonlayout.SkeletonLayout>

    <LinearLayout
        android:id="@+id/layoutCardActions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/buttonSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_skip"
            android:contentDescription="@string/dislike_questionnaire"
            android:src="@drawable/ic_skip"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/buttonLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background="@drawable/bg_like"
            android:contentDescription="@string/like_questionnaire"
            android:src="@drawable/ic_like"
            app:tint="@color/white" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>